chore: add lockfile

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,7 @@ on:
     paths: [ "app/**", "components/**", "package.json", "next.config.js", ".github/workflows/**" ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch: {}
 concurrency: { group: frontend-ci, cancel-in-progress: true }
 permissions:
   contents: read
